v1.2.1
- Make JUnit tests compatible with java 1.7
- JUnit tests for PCEP Constructs
- Bugfixes 
v1.2
- Added JUnit tests for PCEP (still to be fully completed)
- Bugfixes
- New experimental objects
v1.1.1
- Added DataPathID Class
v1.1.0 
- Add support of DataPathID
- Updated codes for draft-ietf-pce-stateful-pce-11
- Removed Delegation Parameters TLVs (removed in stateful pce draft since version -03)
- Removed unused propiertary TLVs
- Updated documentation on protocol support
v1.0.1
- Support for Generalized Bandwidth (draft-ietf-pce-gmpls-pcep-extensions-09)
- Bugfixes
v1.0.0
First Release